--- a/fblogin/style.css
+++ b/fblogin/style.css
@@ -188,7 +188,7 @@ section{
     color: white;
     font-size: 20px;
     font-weight: 600;
-    border: 1px solid #006117;
+    border: 1px solid #FF7477;
     border-radius: 3px;
     cursor: pointer;
     outline: none;
